<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="continue_button">Continue</string>
    <string name="empty_email_error">Enter email</string>
    <string name="empty_password_error">Enter password</string>
    <string name="passwords_dont_match_error">Passwords dont match</string>
    <string name="already_have_an_account">Already have an account? Log In</string>
    <string name="dont_have_an_account">Dont have an account yet? Register</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="register_title">Register</string>
    <string name="log_in_title">Log In</string>
    <string name="enter_email" translatable="false">E-Mail</string>
    <string name="enter_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="unknown_auth_error">Authentication error :(</string>
</resources>